helm/shared/mariadb/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mariadb-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:  
  rules:  
    - host: mariadb.pets-api
      http:  
        paths:  
          - path: / 
            pathType: Prefix 
            backend: 
              service: 
                name: mariadb-release
                port:
                  number: 3306
    ingressClassName: nginx
